--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
       content: none;
     }
     .fixed-footer-cust {
-    background: #214020 !important;
+    background: #9C5C39 !important;
     text-align: center;
     padding: 10px 0px 10px 0px;
     width: 100%;
@@ -336,14 +336,14 @@
 }
 .fix-link {
     color: #fff !important;
-    font-size: 14px;
+    font-size: 16px;
     padding: 0;
     background: transparent;
     border: none;
     background-image: none;
     box-shadow: none;
+    font-weight: 600;
 }
-
     h1,
     h3 {
       font-family: "Scheherazade New", serif;
@@ -684,6 +684,9 @@
 
       padding: 20px;
     }
+    .luxury-apartment-wrapper p {
+    text-align: justify;
+}
 
     span.price_new {
       font-size: 20px !important;
@@ -735,13 +738,13 @@
     }
 
     .cls-new {
-      text-align: center;
-      margin-top: 10px;
-      margin-bottom: 10px;
-      background: #2D3192;
-      border-radius: 5px;
-      padding: 10px;
-    }
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background: #9C5C39;
+    border-radius: 5px;
+    padding: 10px;
+}
 
     .cls-new a {
       color: #fff;
@@ -767,8 +770,8 @@
 
     .enquiry_btn a.open_popup_link {
       padding: 15px 30px;
-      background: #F2B80C;
-      color: #000;
+      background: #9C5C39;
+      color: #fff;
       font-size: 20px;
       border-radius: 13px;
       text-decoration: none;
@@ -792,6 +795,10 @@
       text-align: center;
       margin-top: 40px;
     }
+    a.phone-no {
+    color: #fff;
+    font-size: 20px;
+}
 
     .Schedule a {
       background-color: #9C5C39;
@@ -905,11 +912,21 @@
       section.New_section_1 {
         display: none;
       }
+      .breadcrumb-wrapper {
+        margin-top: 100px;
+    }
+      img.Mobile_banner {
+    display: none;
+}
       .fixed-footer-cust {
-        background: #053029;
         padding: 20px 10px;
     }
-
+    .highrise-content p {
+    text-align: justify !important;
+}
+.highrise-content .discover-btn button p {
+    text-align: center !important;
+}
       .property-details {
         grid-template-columns: 1fr;
         border: none;
@@ -934,7 +951,6 @@
       }
 
       .fixed-footer-cust {
-        background: #fff;
         text-align: center;
         padding: 20px 10px;
       }
@@ -978,6 +994,9 @@
         top: 210px;
         right: 0;
       }
+      .breadcrumb-wrapper {
+    margin-top: 100px;
+}
     }
 
 
@@ -1097,7 +1116,7 @@
           <div class="sub-menu">
             <a href="tel:8880003399"><img src="https://www.nbrgroup.in/assets/new-website/images/phone.png" alt="Phone Icon">8880003399</a>
             <br>
-            <a href="tel:8884610800"><img src="https://www.nbrgroup.in/assets/new-website/images/phone.png" alt="Phone Icon">8884610800</a>
+            <a   href="tel:8884610800"><img src="https://www.nbrgroup.in/assets/new-website/images/phone.png" alt="Phone Icon">8884610800</a>
           </div>
         </div>
         <div class="menu_lists">
@@ -1135,11 +1154,13 @@
 
             <p style="font-weight:200 ;">TO KNOW THE PRICE </p>
             <div class="banner-enquiry-btn">
-              <a href="javascript:void(0)" data-magpopup="#enquiryForm" class="open-popup-link-Banner">CLICK HERE</a>
+              <a class="btn fix-link broucher-click open-popup-link-new" href="javascript:void(0)" data-magpopup="#bookForm">
+                CLICK HERE
+            </a>
             </div>
-            <p style="text-align:center"><img alt="" src="https://www.nbrgroup.in/assets/new-website/images/location.png" style="border:0px; box-sizing:border-box; margin:0px 5px 0px 0px; padding:0px; text-align:center; vertical-align:middle; width:25px"> SARJAPUR ROAD, WHITEFIELD <br>(5min <span class="drive_cls">Drive from</span> RGA Tech&nbsp;Park)
+            <p ><img alt="" src="https://www.nbrgroup.in/assets/new-website/images/location.png" style="border:0px; box-sizing:border-box; margin:0px 5px 0px 0px; padding:0px; text-align:center; vertical-align:middle; width:25px"> SARJAPUR ROAD, WHITEFIELD <br>(5min <span class="drive_cls">Drive from</span> RGA Tech&nbsp;Park)
             </p>
-            <p style="font-weight: 400;"><i class="fa fa-phone" aria-hidden="true"></i>  <a href="tel:8884610800">8884610800</a></p>
+            <p style="font-weight: 400;"><i class="fa fa-phone" aria-hidden="true"></i>  <a  class="phone-no" href="tel:8884610800">8884610800</a></p>
 
           </div>
 
@@ -1213,9 +1234,9 @@
     </section>
     <section>
       <div class="luxury-apartment-wrapper">
-        <h1 style="text-align:center">3 BHK Luxury Apartment for Sale in Sarjapur Road</h1>
+        <h1 >3 BHK Luxury Apartment for Sale in Sarjapur Road</h1>
 
-        <p style="text-align:center">Find exclusive apartments for sale in Sarjapur Road, Bengaluru, designed for those who seek an upgraded lifestyle in one of the city&rsquo;s most vibrant locations. Sarjapur Road is known for its seamless connectivity to IT hubs, including Whitefield and Electronic City, making it a preferred choice for professionals and families. Surrounded by top schools, healthcare facilities, and entertainment zones, this area offers both comfort and convenience in a rapidly developing real estate landscape.</p>
+        <p >Find exclusive apartments for sale in Sarjapur Road, Bengaluru, designed for those who seek an upgraded lifestyle in one of the city&rsquo;s most vibrant locations. Sarjapur Road is known for its seamless connectivity to IT hubs, including Whitefield and Electronic City, making it a preferred choice for professionals and families. Surrounded by top schools, healthcare facilities, and entertainment zones, this area offers both comfort and convenience in a rapidly developing real estate landscape.</p>
       </div>
     </section>
     <section>
@@ -2074,7 +2095,7 @@
   <!-- FAQ Section -->
   <section>
     <div class="Schedule">
-      <a href="javascript:void(0)" data-magpopup="#popup-form-new" class="open-popup-link-new title-font-2 text-center">Schedule A Site Visit</a>
+      <a href="javascript:void(0)"  data-magpopup="#bookForm" class="open-popup-link-new title-font-2 text-center">Schedule A Site Visit</a>
     </div>
 
   </section>
@@ -2504,13 +2525,16 @@
             </a>
         </div> -->
         <div class="col-lg-6 col-sm-6 col-xs-6 div-line pd0">
-            <button class="btn fix-link broucher-click" fdprocessedid="nr24wo">Download Brochure
-            </button>
-        </div>
-        <div class="col-lg-6 col-sm-6 col-xs-6  pd0">
-            <button class="btn fix-link i-am" fdprocessedid="q5bh3j"><i class="fa fa-envelope"></i> Enquire Now
-            </button>
-        </div>
+          <a class="btn fix-link broucher-click open-popup-link-new" href="javascript:void(0)" data-magpopup="#bookForm">
+              Download Brochure
+          </a>
+      </div>
+      <div class="col-lg-6 col-sm-6 col-xs-6 pd0">
+          <a class="btn fix-link i-am open-popup-link-new" href="javascript:void(0)" data-magpopup="#bookForm">
+              <i class="fa fa-envelope"></i> Enquire Now
+          </a>
+      </div>
+      
     </div>
 </div>
 
