--- a/ex.html
+++ b/ex.html
@@ -1520,19 +1520,6 @@ Property prices have appreciated consistently, making Sarjapur Road a top choice
 
      <div class="owl-carousel testimonials-car owl-theme" style="margin-top: 30px;">
        <div class="testimonial-item">
-         <div class="avatar">H</div>
-         <h4>Hunny</h4>
-         <div class="stars">★★★★★</div>
-         <p class="review-text">Our experience with NBR Group has been good . The team was very helpful and responsive answering all of our questions. The project quality and amenities are impressive, making the overall homebuying process very smooth .</p>
-       </div>
-       <div class="testimonial-item">
-         <div class="avatar">M</div>
-         <h4>Mintakumari Suman</h4>
-         <div class="stars">★★★★★</div>
-         <p class="review-text">We have known NBR Group for the past 8 years . I have previously bought villa plots from them and am very happy with the purchase . We were provided with good amaenities and it was a happy purchse .</p>
-       </div>
-
-       <div class="testimonial-item">
          <div class="avatar">J</div>
          <h4>Jitendra Prasad Keshri</h4>
          <div class="stars">★★★★★</div>
@@ -1540,21 +1527,36 @@ Property prices have appreciated consistently, making Sarjapur Road a top choice
        </div>
        <div class="testimonial-item">
          <div class="avatar">N</div>
-         <h4>Nikul Don</h4>
+         <h4>Nitish Yadav92</h4>
+         <div class="stars">★★★★★</div>
+         <p class="review-text">NBR Group has always been reliable when it comes to real estate. I’ve bought a villa plot from them before, and now their new apartments on Sarjapur Road are just as impressive. It’s a great location with good connectivity</p>
+       </div>
+
+       <div class="testimonial-item">
+         <div class="avatar">J</div>
+         <h4>Anuj Kumar YT Official</h4>
+         <div class="stars">A</div>
+         <p class="review-text">The location of the apartments is quite interior but the price of the apartments is quite good compared to the surrounding areas. I am happy to own a home in Sarjapur - Mullur Road .</p>
+       </div>
+       <div class="testimonial-item">
+         <div class="avatar">P</div>
+         <h4>Puja Kumari</h4>
          <div class="stars">★★★★★</div>
          <p class="review-text">Homes are designed spacious. NBR Apartments is a good project to invest in as the area will see great infrastructure developments and good growth .</p>
        </div>
        <div class="testimonial-item">
-         <div class="avatar">K</div>
-         <h4>Khushi Kumari</h4>
+         <div class="avatar">S</div>
+         <h4>
+Suman Arya</h4>
          <div class="stars">★★★★★</div>
-         <p class="review-text">Its is a Very nice and stylish project. We liked the configuration of all the units. 1 bhk units are thoughtfully designed and good investment opportunity with ample space. Good open space in overall project. Ms Sayesha was very helpful in explaining about little things about the project.</p>
+         <p class="review-text">We went to check out the upcoming projects near Sarjpaur Road, I was very impressed with NBR. They seem to have all the modern amenities and do not cost as high as Sobha, Brigade, Purvankara etc.</p>
        </div>
     <div class="testimonial-item">
-         <div class="avatar">B</div>
-         <h4>Baban Thakur</h4>
+         <div class="avatar">R</div>
+         <h4>
+Raushan Roy</h4>
          <div class="stars">★★★★★</div>
-         <p class="review-text">The project is in launching phase, the location is really nice and close to important places like schools and hospitals. The team has been very helpful in explaining everything, and the plans look great. It feels like this is going to be a good place for families to live.</p>
+         <p class="review-text">Location is very nice. NBR Group is building a beautiful apartment with good features. If they finish it well, it will be a prime place on Sarjapur - Mullur Road.</p>
        </div>
       <!--     <div class="testimonial-item">
          <div class="avatar">A</div>
